--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
     name: flask-poetry
-    env: python
+    runtime: image
     plan: starter
     buildCommand: poetry install
     startCommand: gunicorn app:app --chdir ./poetry_flask
